--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>AQI Predictor</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div>
+        <form action="post">
+        <input type="number" placeholder="NO2 Mean Value" name="no2_value">
+        <input type="number" placeholder="SO2 Mean Value" name="so2_value">
+        <input type="number" placeholder="O3 Mean Value" name="o3_value">
+        <input type="number" placeholder="CO Mean Value" name="co_value">
+        </form>
+
+        
+    </div>
     
 </body>
 </html>
