--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
     <div>
         <form action="post">
-        <input type="number" placeholder="NO2 Mean Value" name="no2_value">
-        <input type="number" placeholder="SO2 Mean Value" name="so2_value">
-        <input type="number" placeholder="O3 Mean Value" name="o3_value">
-        <input type="number" placeholder="CO Mean Value" name="co_value">
+        <input type="number" placeholder="NO2 Mean Value" name="no2_value"><br>
+        <input type="number" placeholder="SO2 Mean Value" name="so2_value"><br>
+        <input type="number" placeholder="O3 Mean Value" name="o3_value"><br>
+        <input type="number" placeholder="CO Mean Value" name="co_value"><br>
+        <input type="submit" name="Submit">
         </form>
 
         
